// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Snapshots has custom input format 1`] = `
<DayPickerInput
  classNames={
    Object {
      "container": "objectlist-input__container",
      "overlay": "",
      "overlayWrapper": "objectlist-input__daypicker",
    }
  }
  clickUnselectsDay={true}
  dayPickerProps={
    Object {
      "fixedWeeks": true,
    }
  }
  format="DD/MM/YYYY"
  formatDate={[Function]}
  onDayChange={[Function]}
  parseDate={[Function]}
  placeholder="15th Jul 17"
  value="15th Jul 17"
/>
`;

exports[`Date Snapshots has custom relative date options 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  isClearable={false}
  onChange={[Function]}
  onInputChange={[Function]}
  options={
    Array [
      Object {
        "label": "Right now",
        "value": "now",
      },
      Object {
        "label": "A bit later",
        "value": "later",
      },
      Object {
        "label": "Never ever",
        "value": "never",
      },
    ]
  }
  styles={
    Object {
      "control": [Function],
      "dropdownIndicator": [Function],
      "multiValue": [Function],
      "multiValueLabel": [Function],
    }
  }
/>
`;

exports[`Date Snapshots has null value 1`] = `
<DayPickerInput
  classNames={
    Object {
      "container": "objectlist-input__container",
      "overlay": "",
      "overlayWrapper": "objectlist-input__daypicker",
    }
  }
  clickUnselectsDay={true}
  dayPickerProps={
    Object {
      "fixedWeeks": true,
    }
  }
  format="DD/MM/YYYY"
  formatDate={[Function]}
  onDayChange={[Function]}
  parseDate={[Function]}
  placeholder=""
  value=""
/>
`;

exports[`Date Snapshots renders default 1`] = `
<DayPickerInput
  classNames={
    Object {
      "container": "objectlist-input__container",
      "overlay": "",
      "overlayWrapper": "objectlist-input__daypicker",
    }
  }
  clickUnselectsDay={true}
  dayPickerProps={
    Object {
      "fixedWeeks": true,
    }
  }
  format="DD/MM/YYYY"
  formatDate={[Function]}
  onDayChange={[Function]}
  parseDate={[Function]}
  placeholder="15/07/2017"
  value="15/07/2017"
/>
`;

exports[`Date Snapshots renders with relative comparison 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  isClearable={false}
  onChange={[Function]}
  onInputChange={[Function]}
  options={
    Array [
      Object {
        "label": "Today",
        "value": "today",
      },
      Object {
        "label": "Beginning of this week",
        "value": "week_start",
      },
      Object {
        "label": "Beginning of this month",
        "value": "month_start",
      },
      Object {
        "label": "Beginning of this year",
        "value": "year_start",
      },
    ]
  }
  styles={
    Object {
      "control": [Function],
      "dropdownIndicator": [Function],
      "multiValue": [Function],
      "multiValueLabel": [Function],
    }
  }
/>
`;
